texascale-org/GL-32: Overflow simplify & fix

--- a/texascale-org/static/texascale-org/css/src/page.frontera-secret-sauce.css
+++ b/texascale-org/static/texascale-org/css/src/page.frontera-secret-sauce.css
@@ -34,9 +34,14 @@ COMPONENTS: Image Map: Structure
   gap: 2em;
 }
 .c-image-map__item {
-  /* Force flex items to not overflow container */
-  min-height: 0;
+  /* (any value) Force flex items to not overflow container */
+  min-height: 3.5em;
+  overflow: hidden; /* Relies on `.c-image-map__item-desc` scroll */
 }
+.c-image-map__item-desc {
+  overflow-y: auto;
+}
+
 .c-image-map__item-caption {
   /* Support managing overflow */
   height: 100%;
@@ -53,18 +58,11 @@ COMPONENTS: Image Map: Structure
 
     max-height: calc(1em * var(--max-lines) * var(--line-height));
   }
-  .c-image-map__item .c-image-map__item-desc {
-    overflow: hidden;
-  }
 }
 /* On wide viewport, limit height dynamically and scroll overflow */
 @media only screen and (min-width: 992px) {
   .c-image-map__item {
     max-height: 33.3%;
-  }
-  /* Support scrolling of description */
-  .c-image-map__item-desc {
-    overflow-y: auto;
   }
 }
 
